kyy-k8s-config/src/app/backend/voucher-client/voucher-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: voucher-client
  name: voucher-client
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: voucher-client
