kyy-k8s-config/src/app/backend/voucher-client/voucher-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: voucher-client
  name: voucher-client
spec:
  rules:
    - host: account.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: voucher-client
              servicePort: 80
    - host: account.accgg.com
      http:
        paths:
          - backend:
              serviceName: voucher-client
              servicePort: 80
